--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ typings/
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
-.parcel-cache
+.parcel-cache/
 
 # Next.js build output
 .next
